# helios-network

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  Makefile  README.md  index.html  meson.build  package-lock.json  package.json  playwright.config.js  sync-version.cjs  vite.config.js
.github/workflows/: docs.yml  release.yml
.mplconfig/: fontlist-v390.json
Future/: categorical-attributes-plan.md  helios-network-protocol-plan.md  layout_delegation_support_plan.md  multicategory-plan.md  network-measures-plan.md  stable-sort-plan.md
cmake/: HeliosNetworkConfig.cmake.in
docs/: CONTRIBUTING.md  attribute-introspection.md  dense-buffer-sessions.md  doxygen.conf  events.md  index.html  jsdoc.json  packaging.md  protocol-batches.md  query-language.md  saving-and-loading.md  selectors.md  serialization-format.md  steppable-sessions.md  versioning.md  visualization-buffers.md  xnet-format.md
docs/api/: EdgeSelector.html  HeliosNetwork.html  HeliosNetwork.js.html  NodeSelector.html  global.html  index.html
docs/example_xnet/: example_large.xnet
docs/examples/: README.md
docs/examples/browser/: README.md  index.html  main.js  shared.css
docs/examples/browser/attributes/: index.html  main.js
docs/examples/browser/basic-usage/: index.html  main.js
docs/examples/browser/iteration/: index.html  main.js
docs/examples/browser/modifying-graphs/: index.html  main.js
docs/examples/browser/saving-loading/: index.html  main.js
docs/examples/browser/utils/: load-helios.js
docs/examples/node/: README.md  attributes.md  attributes.mjs  index.html  run.mjs
docs/examples/node/attributes/: README.md  main.mjs
docs/examples/node/basic-usage/: README.md  main.mjs
docs/examples/node/iteration/: README.md  main.mjs
docs/examples/node/modifying-graphs/: README.md  main.mjs
docs/examples/node/roundtrip-validation/: README.md  WALKTHROUGH.md  main.mjs
docs/examples/node/saving-loading/: README.md  main.mjs
docs/examples/node/toroidal-dimension-basic/: README.md  main.mjs
docs/examples/node/toroidal-dimension-session/: README.md  main.mjs
docs/examples/node/utils/: load-helios.mjs
docs/jsdocs/: index.html
jsdoc/: index.html
packaging/conan/: conanfile.py
packaging/vcpkg/helios-network/: portfile.cmake  vcpkg.json
python/: README.md  meson.build  pyproject.toml
python/docs/: API.md  PYDOC.md
python/examples/: attributes.py  basic_usage.py  conversions.py  generate_umap_example_networks.py  saving_loading.py  selectors.py  toroidal_dimensions_plot.py  toroidal_dimensions_table.py  toroidal_methods_order2_plot.py
python/src/helios_network/: __init__.py  _conversions.py  _core.c  _node_link_json.py  _wrapper.py  umap.py
python/tests/: test_conversions.py  test_network.py  test_umap.py
research/analyses/: toroidal_multiscale_dimension.md
scripts/: exported-functions.py  exported-functions.txt  generate-inline-wasm.mjs
src/: helios-network-inline.js  helios-network.js
src/Old/: CXNetworkCentrality.c  CXNetworkCentrality.h  CXNetwork_old.c  CXNetwork_old.h
src/js/: HeliosNetwork.js  moduleFactory.js  version.js
src/js/inline/: wasm-inline.js
src/js/sessions/: WasmSteppableSession.js
src/js/sessions/worker/: HeliosSessionWorker.browser.js  HeliosSessionWorker.node.js  HeliosSessionWorkerCore.js  WorkerClient.js
src/native/include/helios/: CXBasicArrays.h  CXCommons.h  CXDictionary.h  CXDistribution.h  CXIndexManager.h  CXNeighborStorage.h  CXNetwork.h  CXNetworkBXNet.h  CXNetworkGML.h  CXNetworkGT.h  CXNetworkNodeLinkJSON.h  CXNetworkSerialization.h  CXNetworkXNet.h  CXSet.h  CXSimpleQueue.h  CXSortTest.h  CXZstd.h
src/native/libraries/htslib/: bgzf.c  config.h  hts_shim.c  kfunc.c
src/native/libraries/zstd/: VENDORED.md
src/native/src/: CXDictionary.c  CXDistribution.c  CXIndexManager.c  CXLeiden.c  CXNeighborStorage.c  CXNetwork.c  CXNetworkBXNet.c  CXNetworkGT.c  CXNetworkGenerators.c  CXNetworkInterchange.c  CXNetworkMeasurement.c  CXNetworkQuery.c  CXNetworkSerialization.c  CXNetworkXNet.c  CXSet.c  CXSimpleQueue.c  CXSortTest.c  CXZstd.c
src/native/src/fib/: fib.c  fib.h  fibpriv.h
tests/: attribute_writers.test.js  browser-test.html  browser.spec.js  core_features.test.js  dimension_measurements.test.js  events_system.test.js  interpolate_positions.test.js  leiden_sbm.test.js  leiden_session.test.js  leiden_worker_session.test.js  multicategory.test.js  neighbors_api.test.js  network_measurements.test.js  node_helios.test.js  sort_arrays.test.js  stress_network.test.js
tests/helpers/: bufferAccess.js
tests/native/: maintest.c  test.c  test_measurements.c  test_network.c  test_sort.c
