[build-system]
requires = ["meson-python>=0.15.0", "meson>=1.2.0", "ninja"]
build-backend = "mesonpy"

[project]
name = "helios-network"
version = "0.6.0"
description = "Helios Network Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Helios" }]
