[build-system]
requires = ["meson-python>=0.15.0", "meson>=1.2.0", "ninja"]
build-backend = "mesonpy"

[project]
name = "helios-network"
version = "0.10.1"
description = "Helios Network Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Helios" }]

[project.optional-dependencies]
umap = [
  "numpy>=1.23",
  "scipy>=1.10",
  "umap-learn>=0.5.7",
  "pynndescent>=0.5.12",
]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-musllinux_*"
test-requires = ["pytest"]
test-command = "python -m pytest {project}/python/tests"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
